MDEV-22984: Throw an error when arguments to window functions are window functions

Window function is not allowed as arguments to window functions according to the standard.